--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "resemblejs": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.2",
+    "@types/react": "^18.0.17",
+    "typescript": "^4.7.4"
   }
 }
