--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@types/mz": "^2.7.4",
+    "@types/resemblejs": "^4.1.0",
     "mz": "^2.7.0",
     "next": "latest",
     "react": "latest",
