--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@types/mz": "^2.7.4",
     "@types/resemblejs": "^4.1.0",
-    "mz": "^2.7.0",
+    "graceful-fs": "^4.2.10",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
